--- a/Stack sorting by Hoare quick sort with median/README
+++ b/Stack sorting by Hoare quick sort with median/README
@@ -1,4 +1,4 @@
-Данные программы, это быстрая сортировка стека, методом быстрой сортировки Хоара. 
+**Данные программы, это быстрая сортировка стека, методом быстрой сортировки Хоара. **
 - Stack_Sport - это первая версия сортировки стека;
 - Al_Sort_Stock_Xoar_S_Pivot_MK1 - это первая полноценная быстрая сортировка методом Хоара;
 - Al_Sort_Stock_Car_S_Pivot_MK2 - это финальная версия быстрой сортировки стека, методом быстрой сортировки Хоара;
